// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ComponentPlayground /> Should render the dark theme correctly 1`] = `
<div
  class="react-live css-o32omv e177gi4f0"
>
  <div
    class="css-1ms9r5c e177gi4f3"
  >
    <div
      class="css-1xrujsz e177gi4f4"
    >
      Live Preview
    </div>
    <div
      class="css-1oja9er e177gi4f4"
    >
      Source Code
      <button
        aria-label="Toggle full screen"
        class="css-1a7vuu6 ev51h780"
      >
        <svg
          viewBox="0 0 512 512"
        >
          <path
            d="M64 371.2h76.795V448H192V320H64v51.2zm76.795-230.4H64V192h128V64h-51.205v76.8zM320 448h51.2v-76.8H448V320H320v128zm51.2-307.2V64H320v128h128v-51.2h-76.8z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="css-1ms9r5c e177gi4f3"
  >
    <div
      class="css-1fc71w4 e177gi4f5"
    >
      <div
        class="react-live-preview css-zwvp9g e177gi4f1"
      >
        <div>
          <h1
            style="font-size:2.25rem;font-weight:bold"
          >
            Create Live Code Examples in Spectacle!
          </h1>
          <p
            style="font-size:1.5rem"
          >
            Supports Light and Dark Syntax Themes
          </p>
        </div>
      </div>
    </div>
    <div
      class="css-1fc71w4 e177gi4f5"
    >
      <pre
        class="prism-code language-jsx builtin-prism-theme css-o6dmj e177gi4f2"
        contenteditable="true"
        spellcheck="false"
      >
        <span
          class="token comment"
          spellcheck="true"
        >
          /**
 * Sample React Component
 * Output domContainerNode is 'mountNode'
 */
        </span>
        


        <span
          class="token keyword"
        >
          const
        </span>
         styles 
        <span
          class="token operator"
        >
          =
        </span>
         
        <span
          class="token punctuation"
        >
          {
        </span>
        
  heading
        <span
          class="token punctuation"
        >
          :
        </span>
         
        <span
          class="token punctuation"
        >
          {
        </span>
        
    fontSize
        <span
          class="token punctuation"
        >
          :
        </span>
         
        <span
          class="token string"
        >
          "2.25rem"
        </span>
        <span
          class="token punctuation"
        >
          ,
        </span>
        
    fontWeight
        <span
          class="token punctuation"
        >
          :
        </span>
         
        <span
          class="token string"
        >
          "bold"
        </span>
        
  
        <span
          class="token punctuation"
        >
          }
        </span>
        <span
          class="token punctuation"
        >
          ,
        </span>
        
  copy
        <span
          class="token punctuation"
        >
          :
        </span>
         
        <span
          class="token punctuation"
        >
          {
        </span>
        
    fontSize
        <span
          class="token punctuation"
        >
          :
        </span>
         
        <span
          class="token string"
        >
          "1.5rem"
        </span>
        
  
        <span
          class="token punctuation"
        >
          }
        </span>
        

        <span
          class="token punctuation"
        >
          }
        </span>
        


        <span
          class="token keyword"
        >
          const
        </span>
         HelloWorld 
        <span
          class="token operator"
        >
          =
        </span>
         
        <span
          class="token punctuation"
        >
          (
        </span>
        <span
          class="token punctuation"
        >
          {
        </span>
         name 
        <span
          class="token punctuation"
        >
          }
        </span>
        <span
          class="token punctuation"
        >
          )
        </span>
         
        <span
          class="token operator"
        >
          =
        </span>
        <span
          class="token operator"
        >
          &gt;
        </span>
         
        <span
          class="token punctuation"
        >
          (
        </span>
        
  
        <span
          class="token tag"
        >
          <span
            class="token tag"
          >
            <span
              class="token punctuation"
            >
              &lt;
            </span>
            div
          </span>
          <span
            class="token punctuation"
          >
            &gt;
          </span>
        </span>
        
    
        <span
          class="token tag"
        >
          <span
            class="token tag"
          >
            <span
              class="token punctuation"
            >
              &lt;
            </span>
            h1
          </span>
           
          <span
            class="token attr-name"
          >
            style
          </span>
          <span
            class="token script language-javascript"
          >
            <span
              class="token punctuation"
            >
              =
            </span>
            <span
              class="token punctuation"
            >
              {
            </span>
            styles
            <span
              class="token punctuation"
            >
              .
            </span>
            heading
            <span
              class="token punctuation"
            >
              }
            </span>
          </span>
          <span
            class="token punctuation"
          >
            &gt;
          </span>
        </span>
        
      Create Live Code Examples 
        <span
          class="token keyword"
        >
          in
        </span>
         
        <span
          class="token punctuation"
        >
          {
        </span>
        name
        <span
          class="token punctuation"
        >
          }
        </span>
        <span
          class="token operator"
        >
          !
        </span>
        
    
        <span
          class="token tag"
        >
          <span
            class="token tag"
          >
            <span
              class="token punctuation"
            >
              &lt;/
            </span>
            h1
          </span>
          <span
            class="token punctuation"
          >
            &gt;
          </span>
        </span>
        
    
        <span
          class="token tag"
        >
          <span
            class="token tag"
          >
            <span
              class="token punctuation"
            >
              &lt;
            </span>
            p
          </span>
           
          <span
            class="token attr-name"
          >
            style
          </span>
          <span
            class="token script language-javascript"
          >
            <span
              class="token punctuation"
            >
              =
            </span>
            <span
              class="token punctuation"
            >
              {
            </span>
            styles
            <span
              class="token punctuation"
            >
              .
            </span>
            copy
            <span
              class="token punctuation"
            >
              }
            </span>
          </span>
          <span
            class="token punctuation"
          >
            &gt;
          </span>
        </span>
        
      Supports Light and Dark Syntax Themes
    
        <span
          class="token tag"
        >
          <span
            class="token tag"
          >
            <span
              class="token punctuation"
            >
              &lt;/
            </span>
            p
          </span>
          <span
            class="token punctuation"
          >
            &gt;
          </span>
        </span>
        
  
        <span
          class="token tag"
        >
          <span
            class="token tag"
          >
            <span
              class="token punctuation"
            >
              &lt;/
            </span>
            div
          </span>
          <span
            class="token punctuation"
          >
            &gt;
          </span>
        </span>
        

        <span
          class="token punctuation"
        >
          )
        </span>
        


        <span
          class="token function"
        >
          render
        </span>
        <span
          class="token punctuation"
        >
          (
        </span>
        <span
          class="token tag"
        >
          <span
            class="token tag"
          >
            <span
              class="token punctuation"
            >
              &lt;
            </span>
            HelloWorld
          </span>
           
          <span
            class="token attr-name"
          >
            name
          </span>
          <span
            class="token attr-value"
          >
            <span
              class="token punctuation"
            >
              =
            </span>
            <span
              class="token punctuation"
            >
              "
            </span>
            Spectacle
            <span
              class="token punctuation"
            >
              "
            </span>
          </span>
           
          <span
            class="token punctuation"
          >
            /&gt;
          </span>
        </span>
        <span
          class="token punctuation"
        >
          )
        </span>
      </pre>
    </div>
  </div>
</div>
`;

exports[`<ComponentPlayground /> Should render the light theme correctly 1`] = `
<div
  class="react-live css-o32omv e177gi4f0"
>
  <div
    class="css-1ms9r5c e177gi4f3"
  >
    <div
      class="css-1xrujsz e177gi4f4"
    >
      Live Preview
    </div>
    <div
      class="css-1xrujsz e177gi4f4"
    >
      Source Code
      <button
        aria-label="Toggle full screen"
        class="css-1a7vuu6 ev51h780"
      >
        <svg
          viewBox="0 0 512 512"
        >
          <path
            d="M64 371.2h76.795V448H192V320H64v51.2zm76.795-230.4H64V192h128V64h-51.205v76.8zM320 448h51.2v-76.8H448V320H320v128zm51.2-307.2V64H320v128h128v-51.2h-76.8z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="css-1ms9r5c e177gi4f3"
  >
    <div
      class="css-1fc71w4 e177gi4f5"
    >
      <div
        class="react-live-preview css-zwvp9g e177gi4f1"
      >
        <div>
          <h1
            style="font-size:2.25rem;font-weight:bold"
          >
            Create Live Code Examples in Spectacle!
          </h1>
          <p
            style="font-size:1.5rem"
          >
            Supports Light and Dark Syntax Themes
          </p>
        </div>
      </div>
    </div>
    <div
      class="css-1fc71w4 e177gi4f5"
    >
      <pre
        class="prism-code language-jsx builtin-prism-theme css-spmpyg e177gi4f2"
        contenteditable="true"
        spellcheck="false"
      >
        <span
          class="token comment"
          spellcheck="true"
        >
          /**
 * Sample React Component
 * Output domContainerNode is 'mountNode'
 */
        </span>
        


        <span
          class="token keyword"
        >
          const
        </span>
         styles 
        <span
          class="token operator"
        >
          =
        </span>
         
        <span
          class="token punctuation"
        >
          {
        </span>
        
  heading
        <span
          class="token punctuation"
        >
          :
        </span>
         
        <span
          class="token punctuation"
        >
          {
        </span>
        
    fontSize
        <span
          class="token punctuation"
        >
          :
        </span>
         
        <span
          class="token string"
        >
          "2.25rem"
        </span>
        <span
          class="token punctuation"
        >
          ,
        </span>
        
    fontWeight
        <span
          class="token punctuation"
        >
          :
        </span>
         
        <span
          class="token string"
        >
          "bold"
        </span>
        
  
        <span
          class="token punctuation"
        >
          }
        </span>
        <span
          class="token punctuation"
        >
          ,
        </span>
        
  copy
        <span
          class="token punctuation"
        >
          :
        </span>
         
        <span
          class="token punctuation"
        >
          {
        </span>
        
    fontSize
        <span
          class="token punctuation"
        >
          :
        </span>
         
        <span
          class="token string"
        >
          "1.5rem"
        </span>
        
  
        <span
          class="token punctuation"
        >
          }
        </span>
        

        <span
          class="token punctuation"
        >
          }
        </span>
        


        <span
          class="token keyword"
        >
          const
        </span>
         HelloWorld 
        <span
          class="token operator"
        >
          =
        </span>
         
        <span
          class="token punctuation"
        >
          (
        </span>
        <span
          class="token punctuation"
        >
          {
        </span>
         name 
        <span
          class="token punctuation"
        >
          }
        </span>
        <span
          class="token punctuation"
        >
          )
        </span>
         
        <span
          class="token operator"
        >
          =
        </span>
        <span
          class="token operator"
        >
          &gt;
        </span>
         
        <span
          class="token punctuation"
        >
          (
        </span>
        
  
        <span
          class="token tag"
        >
          <span
            class="token tag"
          >
            <span
              class="token punctuation"
            >
              &lt;
            </span>
            div
          </span>
          <span
            class="token punctuation"
          >
            &gt;
          </span>
        </span>
        
    
        <span
          class="token tag"
        >
          <span
            class="token tag"
          >
            <span
              class="token punctuation"
            >
              &lt;
            </span>
            h1
          </span>
           
          <span
            class="token attr-name"
          >
            style
          </span>
          <span
            class="token script language-javascript"
          >
            <span
              class="token punctuation"
            >
              =
            </span>
            <span
              class="token punctuation"
            >
              {
            </span>
            styles
            <span
              class="token punctuation"
            >
              .
            </span>
            heading
            <span
              class="token punctuation"
            >
              }
            </span>
          </span>
          <span
            class="token punctuation"
          >
            &gt;
          </span>
        </span>
        
      Create Live Code Examples 
        <span
          class="token keyword"
        >
          in
        </span>
         
        <span
          class="token punctuation"
        >
          {
        </span>
        name
        <span
          class="token punctuation"
        >
          }
        </span>
        <span
          class="token operator"
        >
          !
        </span>
        
    
        <span
          class="token tag"
        >
          <span
            class="token tag"
          >
            <span
              class="token punctuation"
            >
              &lt;/
            </span>
            h1
          </span>
          <span
            class="token punctuation"
          >
            &gt;
          </span>
        </span>
        
    
        <span
          class="token tag"
        >
          <span
            class="token tag"
          >
            <span
              class="token punctuation"
            >
              &lt;
            </span>
            p
          </span>
           
          <span
            class="token attr-name"
          >
            style
          </span>
          <span
            class="token script language-javascript"
          >
            <span
              class="token punctuation"
            >
              =
            </span>
            <span
              class="token punctuation"
            >
              {
            </span>
            styles
            <span
              class="token punctuation"
            >
              .
            </span>
            copy
            <span
              class="token punctuation"
            >
              }
            </span>
          </span>
          <span
            class="token punctuation"
          >
            &gt;
          </span>
        </span>
        
      Supports Light and Dark Syntax Themes
    
        <span
          class="token tag"
        >
          <span
            class="token tag"
          >
            <span
              class="token punctuation"
            >
              &lt;/
            </span>
            p
          </span>
          <span
            class="token punctuation"
          >
            &gt;
          </span>
        </span>
        
  
        <span
          class="token tag"
        >
          <span
            class="token tag"
          >
            <span
              class="token punctuation"
            >
              &lt;/
            </span>
            div
          </span>
          <span
            class="token punctuation"
          >
            &gt;
          </span>
        </span>
        

        <span
          class="token punctuation"
        >
          )
        </span>
        


        <span
          class="token function"
        >
          render
        </span>
        <span
          class="token punctuation"
        >
          (
        </span>
        <span
          class="token tag"
        >
          <span
            class="token tag"
          >
            <span
              class="token punctuation"
            >
              &lt;
            </span>
            HelloWorld
          </span>
           
          <span
            class="token attr-name"
          >
            name
          </span>
          <span
            class="token attr-value"
          >
            <span
              class="token punctuation"
            >
              =
            </span>
            <span
              class="token punctuation"
            >
              "
            </span>
            Spectacle
            <span
              class="token punctuation"
            >
              "
            </span>
          </span>
           
          <span
            class="token punctuation"
          >
            /&gt;
          </span>
        </span>
        <span
          class="token punctuation"
        >
          )
        </span>
      </pre>
    </div>
  </div>
</div>
`;

exports[`<ComponentPlayground /> Should render with a custom background color 1`] = `
<div
  class="react-live css-o32omv e177gi4f0"
>
  <div
    class="css-1ms9r5c e177gi4f3"
  >
    <div
      class="css-1xrujsz e177gi4f4"
    >
      Live Preview
    </div>
    <div
      class="css-1xrujsz e177gi4f4"
    >
      Source Code
      <button
        aria-label="Toggle full screen"
        class="css-1a7vuu6 ev51h780"
      >
        <svg
          viewBox="0 0 512 512"
        >
          <path
            d="M64 371.2h76.795V448H192V320H64v51.2zm76.795-230.4H64V192h128V64h-51.205v76.8zM320 448h51.2v-76.8H448V320H320v128zm51.2-307.2V64H320v128h128v-51.2h-76.8z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="css-1ms9r5c e177gi4f3"
  >
    <div
      class="css-1fc71w4 e177gi4f5"
    >
      <div
        class="react-live-preview css-cv4xj2 e177gi4f1"
      >
        <div>
          <h1
            style="font-size:2.25rem;font-weight:bold"
          >
            Create Live Code Examples in Spectacle!
          </h1>
          <p
            style="font-size:1.5rem"
          >
            Supports Light and Dark Syntax Themes
          </p>
        </div>
      </div>
    </div>
    <div
      class="css-1fc71w4 e177gi4f5"
    >
      <pre
        class="prism-code language-jsx builtin-prism-theme css-spmpyg e177gi4f2"
        contenteditable="true"
        spellcheck="false"
      >
        <span
          class="token comment"
          spellcheck="true"
        >
          /**
 * Sample React Component
 * Output domContainerNode is 'mountNode'
 */
        </span>
        


        <span
          class="token keyword"
        >
          const
        </span>
         styles 
        <span
          class="token operator"
        >
          =
        </span>
         
        <span
          class="token punctuation"
        >
          {
        </span>
        
  heading
        <span
          class="token punctuation"
        >
          :
        </span>
         
        <span
          class="token punctuation"
        >
          {
        </span>
        
    fontSize
        <span
          class="token punctuation"
        >
          :
        </span>
         
        <span
          class="token string"
        >
          "2.25rem"
        </span>
        <span
          class="token punctuation"
        >
          ,
        </span>
        
    fontWeight
        <span
          class="token punctuation"
        >
          :
        </span>
         
        <span
          class="token string"
        >
          "bold"
        </span>
        
  
        <span
          class="token punctuation"
        >
          }
        </span>
        <span
          class="token punctuation"
        >
          ,
        </span>
        
  copy
        <span
          class="token punctuation"
        >
          :
        </span>
         
        <span
          class="token punctuation"
        >
          {
        </span>
        
    fontSize
        <span
          class="token punctuation"
        >
          :
        </span>
         
        <span
          class="token string"
        >
          "1.5rem"
        </span>
        
  
        <span
          class="token punctuation"
        >
          }
        </span>
        

        <span
          class="token punctuation"
        >
          }
        </span>
        


        <span
          class="token keyword"
        >
          const
        </span>
         HelloWorld 
        <span
          class="token operator"
        >
          =
        </span>
         
        <span
          class="token punctuation"
        >
          (
        </span>
        <span
          class="token punctuation"
        >
          {
        </span>
         name 
        <span
          class="token punctuation"
        >
          }
        </span>
        <span
          class="token punctuation"
        >
          )
        </span>
         
        <span
          class="token operator"
        >
          =
        </span>
        <span
          class="token operator"
        >
          &gt;
        </span>
         
        <span
          class="token punctuation"
        >
          (
        </span>
        
  
        <span
          class="token tag"
        >
          <span
            class="token tag"
          >
            <span
              class="token punctuation"
            >
              &lt;
            </span>
            div
          </span>
          <span
            class="token punctuation"
          >
            &gt;
          </span>
        </span>
        
    
        <span
          class="token tag"
        >
          <span
            class="token tag"
          >
            <span
              class="token punctuation"
            >
              &lt;
            </span>
            h1
          </span>
           
          <span
            class="token attr-name"
          >
            style
          </span>
          <span
            class="token script language-javascript"
          >
            <span
              class="token punctuation"
            >
              =
            </span>
            <span
              class="token punctuation"
            >
              {
            </span>
            styles
            <span
              class="token punctuation"
            >
              .
            </span>
            heading
            <span
              class="token punctuation"
            >
              }
            </span>
          </span>
          <span
            class="token punctuation"
          >
            &gt;
          </span>
        </span>
        
      Create Live Code Examples 
        <span
          class="token keyword"
        >
          in
        </span>
         
        <span
          class="token punctuation"
        >
          {
        </span>
        name
        <span
          class="token punctuation"
        >
          }
        </span>
        <span
          class="token operator"
        >
          !
        </span>
        
    
        <span
          class="token tag"
        >
          <span
            class="token tag"
          >
            <span
              class="token punctuation"
            >
              &lt;/
            </span>
            h1
          </span>
          <span
            class="token punctuation"
          >
            &gt;
          </span>
        </span>
        
    
        <span
          class="token tag"
        >
          <span
            class="token tag"
          >
            <span
              class="token punctuation"
            >
              &lt;
            </span>
            p
          </span>
           
          <span
            class="token attr-name"
          >
            style
          </span>
          <span
            class="token script language-javascript"
          >
            <span
              class="token punctuation"
            >
              =
            </span>
            <span
              class="token punctuation"
            >
              {
            </span>
            styles
            <span
              class="token punctuation"
            >
              .
            </span>
            copy
            <span
              class="token punctuation"
            >
              }
            </span>
          </span>
          <span
            class="token punctuation"
          >
            &gt;
          </span>
        </span>
        
      Supports Light and Dark Syntax Themes
    
        <span
          class="token tag"
        >
          <span
            class="token tag"
          >
            <span
              class="token punctuation"
            >
              &lt;/
            </span>
            p
          </span>
          <span
            class="token punctuation"
          >
            &gt;
          </span>
        </span>
        
  
        <span
          class="token tag"
        >
          <span
            class="token tag"
          >
            <span
              class="token punctuation"
            >
              &lt;/
            </span>
            div
          </span>
          <span
            class="token punctuation"
          >
            &gt;
          </span>
        </span>
        

        <span
          class="token punctuation"
        >
          )
        </span>
        


        <span
          class="token function"
        >
          render
        </span>
        <span
          class="token punctuation"
        >
          (
        </span>
        <span
          class="token tag"
        >
          <span
            class="token tag"
          >
            <span
              class="token punctuation"
            >
              &lt;
            </span>
            HelloWorld
          </span>
           
          <span
            class="token attr-name"
          >
            name
          </span>
          <span
            class="token attr-value"
          >
            <span
              class="token punctuation"
            >
              =
            </span>
            <span
              class="token punctuation"
            >
              "
            </span>
            Spectacle
            <span
              class="token punctuation"
            >
              "
            </span>
          </span>
           
          <span
            class="token punctuation"
          >
            /&gt;
          </span>
        </span>
        <span
          class="token punctuation"
        >
          )
        </span>
      </pre>
    </div>
  </div>
</div>
`;

exports[`<ComponentPlayground /> Should render with a custom code block 1`] = `
<div
  class="react-live css-o32omv e177gi4f0"
>
  <div
    class="css-1ms9r5c e177gi4f3"
  >
    <div
      class="css-1xrujsz e177gi4f4"
    >
      Live Preview
    </div>
    <div
      class="css-1xrujsz e177gi4f4"
    >
      Source Code
      <button
        aria-label="Toggle full screen"
        class="css-1a7vuu6 ev51h780"
      >
        <svg
          viewBox="0 0 512 512"
        >
          <path
            d="M64 371.2h76.795V448H192V320H64v51.2zm76.795-230.4H64V192h128V64h-51.205v76.8zM320 448h51.2v-76.8H448V320H320v128zm51.2-307.2V64H320v128h128v-51.2h-76.8z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="css-1ms9r5c e177gi4f3"
  >
    <div
      class="css-1fc71w4 e177gi4f5"
    >
      <div
        class="react-live-preview css-cv4xj2 e177gi4f1"
      />
      <div
        class="react-live-error css-1qmf1kp e177gi4f6"
      >
        ReferenceError: mountNode is not defined
      </div>
    </div>
    <div
      class="css-1fc71w4 e177gi4f5"
    >
      <pre
        class="prism-code language-jsx builtin-prism-theme css-spmpyg e177gi4f2"
        contenteditable="true"
        spellcheck="false"
      >
        <span
          class="token keyword"
        >
          const
        </span>
         Button 
        <span
          class="token operator"
        >
          =
        </span>
         
        <span
          class="token punctuation"
        >
          (
        </span>
        <span
          class="token punctuation"
        >
          {
        </span>
         title 
        <span
          class="token punctuation"
        >
          }
        </span>
        <span
          class="token punctuation"
        >
          )
        </span>
         
        <span
          class="token operator"
        >
          =
        </span>
        <span
          class="token operator"
        >
          &gt;
        </span>
         
        <span
          class="token punctuation"
        >
          (
        </span>
        <span
          class="token tag"
        >
          <span
            class="token tag"
          >
            <span
              class="token punctuation"
            >
              &lt;
            </span>
            button
          </span>
           
          <span
            class="token attr-name"
          >
            type
          </span>
          <span
            class="token attr-value"
          >
            <span
              class="token punctuation"
            >
              =
            </span>
            <span
              class="token punctuation"
            >
              "
            </span>
            button
            <span
              class="token punctuation"
            >
              "
            </span>
          </span>
          <span
            class="token punctuation"
          >
            &gt;
          </span>
        </span>
        <span
          class="token punctuation"
        >
          {
        </span>
         title 
        <span
          class="token punctuation"
        >
          }
        </span>
        <span
          class="token tag"
        >
          <span
            class="token tag"
          >
            <span
              class="token punctuation"
            >
              &lt;/
            </span>
            button
          </span>
          <span
            class="token punctuation"
          >
            &gt;
          </span>
        </span>
        <span
          class="token punctuation"
        >
          )
        </span>
        <span
          class="token punctuation"
        >
          ;
        </span>
        
      
        <span
          class="token function"
        >
          render
        </span>
        <span
          class="token punctuation"
        >
          (
        </span>
        <span
          class="token tag"
        >
          <span
            class="token tag"
          >
            <span
              class="token punctuation"
            >
              &lt;
            </span>
            Button
          </span>
           
          <span
            class="token attr-name"
          >
            title
          </span>
          <span
            class="token attr-value"
          >
            <span
              class="token punctuation"
            >
              =
            </span>
            <span
              class="token punctuation"
            >
              "
            </span>
            My
          </span>
           
          <span
            class="token attr-name"
          >
            Button"
          </span>
           
          <span
            class="token punctuation"
          >
            /&gt;
          </span>
        </span>
        <span
          class="token punctuation"
        >
          ,
        </span>
         mountNode
        <span
          class="token punctuation"
        >
          )
        </span>
        <span
          class="token punctuation"
        >
          ;
        </span>
      </pre>
    </div>
  </div>
</div>
`;
